--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp"rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <title>Wix.ceramic</title>
 </head>
 <body>
-    
+    <container>
+        <head>
+            <div class="search">
+                <i class="material-icons" >search</i>
+                <input class="form-control" type="text" placeholder="Search...">
+            </div>
+            <div class="menu" >
+                <div class="login">
+                    <a href="#">
+                        <div><i class="material-icons" >person</i></div>
+                        <div><p>Log in</p></div>
+                    </a>
+                </div>
+                <div><a href="#"><i class="material-icons" >add_shopping_cart</i></a></div>
+            </div>
+            <nav>
+                <div class="nav_title">
+                   CERAMIC-STUDIO
+                </div>
+                <div class="nav_tool">
+                    <ul class="tool">
+                        <li>Home</li>
+                        <li>Shop</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+            </nav>
+        </head>
+        <main>
+            <section class="section1">
+                <div class="banner_img">
+                    <img src="assets/images/banner.webp" alt="">
+                </div>
+                <div class="banner_content">
+                    <title>CERAMIC-STUDIO</title>
+                    <p>Artisan Pottery</p>
+                    <button>Shop now</button>
+            </section>
+            <section class="section2">
+                <p></p>
+            </section>
+            <section class="section3">
+            </section>
+            <section class="section4">
+            </section>
+        </main>
+        <footer>
+            <div class="map"></div>
+            <div class="foot_icon"></div>
+            <p>2023 by Ceramic-Studio. Proudly created with <a href="#">Wix.com</a></p>
+        </footer>
+    </container>
 </body>
 </html>
